# ireader

./: .gitignore  README.md  config.json  ireader.py  pyproject.toml  setup_kokoro.sh  setup_piper.sh  smart-reader.py  start-ollama.sh  test_document.py
