[project]
name = "ireader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ollama>=0.6.1",
    "pymupdf>=1.26.7",
    "pygame>=2.5.2",
    "reportlab>=4.0.7",
    "kokoro-onnx>=0.4.0",
    "soundfile>=0.12.1",
]
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true  

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

